unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/LS_VC__Visual_Calendar_Q_Moment__c.object-meta.xml
<CustomObject>
    <label>Visual Calendar Quarterly Moment</label>
    <nameField>
        <label>Q Moment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar Quarterly Moments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>