unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__Category__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>LS_VC__Visual_Calendar_Category__c</referenceTo>
    <relationshipName>Visual_Calendar_Q_Moments</relationshipName>
    <type>Lookup</type>
</CustomField>