unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__Link_2_Label__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Link_2_Label__c</fullName>
    <label>Link 2 Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>