unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__Link_3__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Link_3__c</fullName>
    <label>Link 3</label>
    <type>Url</type>
</CustomField>