unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__Quarters__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Quarters__c</fullName>
    <label>Quarters</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>