unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__URL__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__URL__c</fullName>
    <label>URL</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>