unpackaged/main/default/objects/LS_VC__Visual_Calendar_Q_Moment__c/fields/LS_VC__Visual_Calendar_Priority__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Visual_Calendar_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <referenceTo>LS_VC__Visual_Calendar_Priority__c</referenceTo>
    <relationshipLabel>Visual Calendar Quarterly Moments</relationshipLabel>
    <relationshipName>Visual_Calendar_Q_Moments</relationshipName>
    <type>Lookup</type>
</CustomField>